--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles .article:nth-of-type(1) { background:rgb(1, 2, 34); }
 #articles .article:nth-of-type(2) { background:rgb(25, 0, 43); }
 @media screen and (max-width: 650px) {
-  #articles {padding:20px 0;}
-  #articles .box {width:87%;}
+  #articles {padding:5% 0;}
+  #articles .box {width:90%;}
+  #articles .article {margin:5% 0;}
   #articles .article .titre {font-size:22px; }
   #articles .article .date {margin: 5px 0 10px 0; font-size:12px; }
 }
