--- a/index.html
+++ b/index.html
@@ -40,21 +40,18 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 }
 
 /* page articles ------------------------------------------------------------------- */
-#articles {width:100%; background:white; color:white; text-align:center; padding:40px 0; }
-#articles a {color:white;}
+#articles {width:100%; background:white; color:black; text-align:center; padding:50px 0; }
+#articles a {color:black;}
 #articles .box {width:600px; margin:0 auto;}
-#articles .titre {font-size:60px; font-weight:900; line-height:115%; padding-bottom:30px; }
-#articles .article {padding:30px; margin:15px 0; text-align:left; /* border-bottom:solid 1px rgba(0,0,0,0.1); */ cursor:pointer; border-radius:20px;  }
-#articles .article .titre {font-size:24px; font-weight:700; padding:0; margin:0; line-height:130%; }
+#articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
+#articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
+#articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
 #articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
-#articles .article .texte {font-size:16px; font-weight:400; line-height:150%; opacity:0.8; }
-#articles .article:nth-of-type(1) { background:rgb(1, 2, 34); }
-#articles .article:nth-of-type(2) { background:rgb(25, 0, 43); }
+#articles .article .texte {opacity:0.9; font-size:18px; font-weight:400; line-height:150%; }
 @media screen and (max-width: 650px) {
-  #articles {padding:5% 0;}
-  #articles .box {width:90%;}
-  #articles .article {margin:5% 0;}
-  #articles .article .titre {font-size:22px; }
+  #articles {padding:20px 0;}
+  #articles .box {width:87%;}
+  #articles .article .titre {font-size:22px; font-weight:900; }
   #articles .article .date {margin: 5px 0 10px 0; font-size:12px; }
 }
 
@@ -99,8 +96,8 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 <div id="articles">
 <div class="box">
 
-<div class="article couleur1" data-id="2"></div>
-<div class="article couleur2" data-id="1"></div>
+<div class="article" data-id="2"></div>
+<div class="article" data-id="1"></div>
 
 </div>
 </div>
@@ -180,12 +177,11 @@ articles[i].innerHTML = '<a href="'+url+'"><div class="titre">'+titre+'</div><di
 
 
 // cacher barre en dessous du dernier article ----------------------------------------
-/*
 if (articles.length > 0) {
 const dernierArticle = articles[articles.length - 1];
 dernierArticle.style.border = 'none';
 }
-*/
+
 
 
 
