--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" href="/code/articles.css">
+<link rel="stylesheet" href="/code/homepage.css">
 
 </head>
 <body>
@@ -60,7 +60,7 @@
       </div>
 
 
-<script src="/code/articles.js"></script>
+<script src="/code/homepage.js"></script>
 
 </body>
 </html>
